<resources>
    <string name="app_name">Chat App</string>
    <string name="login_welcome_message">Welcome to ChatApp</string>
    <string name="login_send_otp_button">Send</string>
    <string name="new_user_welcome_text">Hello,\n1234567890</string>
    <string name="new_user_welcome_sub_text">Want us to call you something else?</string>
    <string name="new_user_name">Your Name?</string>
    <string name="otp_verification_code_text">Verification Code</string>
    <string name="otp_verification_sub_text">Please enter the verification code sent to your phone</string>
    <string name="otp_hint">-</string>
    <string name="otp_did_not_receive_text">Did not receive the Otp?</string>
    <string name="otp_resend_button">Resend</string>
    <string name="otp_verify_button">Verify OTP</string>
    <string name="tnc_text"><![CDATA[Read our Privacy Policy. Tap \"Agree &\nContinue\" to accept the Terms of Service.]]></string>
    <string name="from_sujay_text">from\nSUJAY</string>
    <string name="invalid_phone_error">Please Enter a Valid Phone number</string>
    <string name="chats_tab_text">Chats</string>
    <string name="group_chats_tab_text">Group Chats</string>
    <string name="logout_text">Logout</string>
    <string name="john_doe">John Doe</string>
    <string name="send_message_hint">Type a message</string>
    <string name="Empty_message_error">Please enter a message</string>
    <string name="message_placeholder">message</string>
    <string name="new_group_fab_text">new group</string>
    <string name="new_group_sub_title">Add members</string>
    <string name="new_group_title">New Group</string>
    <string name="create_group_button_text">Create Group</string>
    <string name="empty_group_name_error_text">Please enter a group name</string>
    <string name="empty_selected_members_error_text">Please select group members</string>
    <string name="new_group_name_hint">Type group name here</string>
    <string name="profile">Profile</string>
</resources>