<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcomeFirstText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:text="@string/new_user_welcome_text"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideH2"
            app:layout_constraintEnd_toEndOf="@id/guideV3"
            app:layout_constraintStart_toStartOf="@id/guideV1"
            app:layout_constraintTop_toTopOf="@id/guideH1" />

        <TextView
            android:id="@+id/welcomeFirstSubText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:text="@string/new_user_welcome_sub_text"
            app:layout_constraintBottom_toTopOf="@id/guideH4"
            app:layout_constraintEnd_toEndOf="@id/guideV3"
            app:layout_constraintStart_toStartOf="@id/guideV1"
            app:layout_constraintTop_toTopOf="@id/guideH3" />

        <EditText
            android:id="@+id/userNameTextEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:hint="@string/new_user_name"
            android:inputType="textNoSuggestions"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/guideH6"
            app:layout_constraintEnd_toEndOf="@id/guideV3"
            app:layout_constraintStart_toStartOf="@id/guideV1"
            app:layout_constraintTop_toTopOf="@id/guideH5" />

        <ImageView
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toTopOf="@id/guideH8"
            app:layout_constraintEnd_toEndOf="@id/guideV3"
            app:layout_constraintStart_toStartOf="@id/guideV2"
            app:layout_constraintTop_toTopOf="@id/guideH7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.77" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideH8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>